--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,11 @@
 body {
     height: 100%;
-    background-color: black !important;
+    background-color: black;
+    background-image: linear-gradient(rgb(0, 0, 0), rgb(139, 139, 137));
 }
 
 p {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
 }
 
 #full-container {
@@ -27,7 +28,6 @@ p {
     height: 2rem !important;
     background-color: transparent;
     border: none;
-
 }
 
 #city-name {
@@ -36,7 +36,14 @@ p {
 }
 
 #current-card {
+    /* width: 100%; */
+    height: 100%;
+    background-image: 
+    url("./assets/img/pexels-ruvim-miksanskiy-1438761.jpg")
+     blue center cover no-repeat;
     border-radius: 1rem !important;
+    box-shadow: 0 0 3px 0.5px white;
+    padding: 1rem 0 !important;
 }
 
 #current-weather {
@@ -48,6 +55,7 @@ p {
 }
 
 .body-box {
+    height: 60%;
     margin-top: -0.5rem;
 }
 
@@ -85,4 +93,9 @@ p {
 
 .five-day {
     border-radius: 1rem !important;
+    box-shadow: 0 0 3px 0.5px white;
+}
+
+.fiveDayTemp {
+    margin-top: -2rem;
 }
